--- a/src/assets/css/cmps/AppHeader.css
+++ b/src/assets/css/cmps/AppHeader.css
@@ -51,9 +51,9 @@ header {
 .bar1,
 .bar2,
 .bar3 {
-    width: 1.5rem;
-    height: 0.2rem;
-    background-color: #202124;
+    width: 35px;
+    height: 5px;
+    background-color: #333;
     margin: 6px 0;
     transition: 0.4s;
 }
